# Dragon

./: .env.example  .gitignore  README.md  backtest_v2.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat
db/: __init__.py  connection.py  migrate_005_bars.py  migrate_backtest.py  migrate_optimizer.py  models.py  persist.py  schema.sql
dragon-engine-web/: index.html  package-lock.json  package.json  tsconfig.app.json
dragon-engine-web/public/: pipeline_result_sample.json
dragon-engine-web/src/: main.ts
infra/docker/: Dockerfile.python
infra/scripts/: start-dev.sh
scripts/: analyze_backtest.py  backfill_index.py  backfill_ohlcv.py  export_sample_response.py  factor_discovery.py  optimize_params.py  optimize_regime.py
services/api_gateway/: pom.xml
services/backtest/: __init__.py  engine.py  episode.py  historical_filler.py  holding_scorer.py  market_regime.py  market_scanner.py  models.py  reflection.py  registry.py  rules.py  strategies.py
services/capital_flow_service/: fetcher.py
services/cognitive_layer/: __init__.py  event_extractor.py  news_fetcher.py
services/data_adapter/: __init__.py  interface.py  market_data_provider.py
services/dragon_tiger_service/: fetcher.py
services/event_service/: __init__.py  extractor.py  fetch_news.py  ranking.py  topic_extractor.py
services/feature_engine/: __init__.py  alpha_factors.py
services/feature_service/: __init__.py
services/graph_service/: __init__.py  graph.py  main.py
shared/: __init__.py  config_loader.py  filters.py  market_regime.py  regime_config.py  scorer.py
(+164 files in other folders)
