[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-engine"
version = "0.1.0"
description = "A股事件驱动龙头/妖股认知引擎"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "chromadb>=0.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "akshare>=1.14.0",
    "tushare>=1.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["shared*", "services*"]

[tool.ruff]
line-length = 100
target-version = "py311"
